# launchpad

./: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg
data/: 85-brltty.rules.disabled  99CH341.rules  selmaToolPath.nc
src/launchpad/: __version__.py  bin.py  data.py  gui.py  module.py  selma.py
src/launchpad.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
