[metadata]
name = bitty
version = 0.0.1
author = Ian Santopietro
author_email = isantop@gmail.com
description = A small package to send a g-code file to a universal G-Code sender
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isantop/bitty1
project_urls =
    Bug Tracker = https://github.com/isantop/bitty1/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
