[metadata]
name = launchpad
version = attr:launchpad.__version__.launchpad_version
author = Ian Santopietro
author_email = isantop@gmail.com
description = A small package to send a g-code file to a universal G-Code sender
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/isantop/launchpad
project_urls =
    Bug Tracker = https://github.com/isantop/launchpad/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
install_requires =
    pyserial >= 3.5

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.entry_points]
console_scripts =
    launchpad = launchpad.bin:run
    launchpad_setup = launchpad.bin:setup
    launchpad_update = launchpad.bin:update

[options.packages.find]
where = src
